# simplewindow

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: linting.yml  publish_crate.yml
src/: main.rs
