[package]
authors = ["Nathan Woods <npwoods@alumni.cmu.edu>"]
description = "A cross platform tool to display a single window"
edition = "2024"
license = "GPL-2.0-or-later"
name = "simplewindow"
repository = "https://github.com/npwoods/simplewindow"
version = "0.1.0"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5", features = ["derive"] }
raw-window-handle = "0.6"
winit = { version = "0.30.13", features = ["rwh_05"] }
x11 = "2.21.0"
